# moltbot-site

./: .gitignore  .pre-commit-config.yaml  COPY_EXTRACTION_SUMMARY.md  MODULAR_REFACTORING.md  QUICK_START.md  README.md  TEST_UPDATE_SUMMARY.md  debug-full.html  debug.html  full-debug.html  index.html  index.html.backup  index.html.backup-20260201-143907  index.html.backup2  moltbot_news_data.json  news-data.json  openclaw-news.json  pyproject.toml  showcase-data.json  simple-debug.html  simple-test.html  skills-data.json  test-copy.html  test-deploy.html  test-filters.html  test.html  test_data_load.html
css/: components.css  layout.css  reset.css  themes.css  variables.css
data/: categories.json  config.json
data/news/: 2026-01.json
data/skills/: ai-llm.json  browser-automation.json  development.json  productivity.json  smart-home.json
js/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  app-data.js  app.js  data-loader.js  example-integration.js  test-data-loader.html
js/renderers/: news-renderer.js  skills-renderer.js
js/utils/: README.md  copy.js  filter.js
scripts/: QUICKSTART.md  README.md  add-news.js  add-skill.js  validate-data.js
templates/: README.md  TEMPLATES_SUMMARY.md  example-usage.js  news-card.html  skill-card.html  test-skill-card.html
tests/: __init__.py  conftest.py  test_data_files.py  test_e2e.py  test_html_validation.py  test_javascript.py  test_links.py
tests/e2e/: __init__.py  conftest.py  test_e2e.py
tests/integration/: conftest.py  test_data_loading.py  test_filters.py  test_rendering.py
tests/unit/: conftest.py  (+4 more)
(+1 files in other folders)
