[project]
name = "moltbot-site"
version = "1.0.0"
description = "Moltbot/OpenClaw official website"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-html>=4.1.0",
    "pytest-cov>=5.0.0",
    "playwright>=1.45.0",
    "pre-commit>=3.7.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
html_report = "reports/pytest-report.html"
markers = [
    "e2e: End-to-end tests with Playwright",
    "slow: Slow tests that may take longer to run",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.coverage.run]
source = ["tests"]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
